# redink

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  install-redink  pyproject.toml  redink.db
adapters/github_webhook/: handler.py
adapters/mcp/: server.py
adapters/slack/: app.py  events.py
docs/: cli.md  slack.md
ops/: sweeper.py
redink_cli/: doctor.py  init_wizard.py  main.py
services/: config.py  github_app.py  github_poster.py  slack_poster.py
services/context/: compressor.py
services/context/providers/: __init__.py  base.py  confluence.py  github_pr.py  jira.py  linked_issues.py  repo_snapshot.py
services/engines/: __init__.py  base.py  claude_code.py  ollama.py
services/memory/: __init__.py  mempalace_store.py  store.py
services/orchestrator/: api.py  db.py  jobs.py  locks.py  models.py  state_machine.py
services/review/: prompt_guard.py  prompts.py  schemas.py  secret_scrubber.py
