[project]
name = "redink"
version = "0.1.0"
description = "AI PR reviewer with Slack clarification and pluggable engines (Ollama, Claude Code, Copilot, ...)"
requires-python = ">=3.12"
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [{ name = "Redink" }]

dependencies = [
    "typer>=0.12",
    "rich>=13",
    "httpx>=0.27",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.2",
    "alembic>=1.13",
    "rq>=1.16",
    "redis>=5",
    "pydantic>=2.8",
    "pydantic-settings>=2.5",
    "PyGithub>=2.4",
    "PyJWT[crypto]>=2.9",
    "cryptography>=43",
    "slack-bolt>=1.20",
    "ollama>=0.3",
    "litellm>=1.51",
    "python-dotenv>=1.0",
    "mcp>=1.0",
    "detect-secrets>=1.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "ruff>=0.6",
    "mypy>=1.11",
]

[project.scripts]
redink = "redink_cli.main:app"
redink-api = "services.orchestrator.api:run"
redink-worker = "services.orchestrator.jobs:run_worker"
redink-mcp = "adapters.mcp.server:run"
redink-slack = "adapters.slack.app:run"
redink-sweeper = "ops.sweeper:run"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["redink_cli*", "adapters*", "services*", "ops*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
